atualizando meus exercícios

--- a/instagram.html
+++ b/instagram.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HitHub</title>
+    <title>Instagram</title>
 </head>
-
 <style>
     *{
     margin: 0px;
@@ -32,11 +31,12 @@ a:hover{
     background-color: red;
 }
 </style>
+
 <body>
 
-    <img src="imagens/tela-github.jpg" alt="github">
-
-    <a href="https://github.com/adorepresentacoes" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram.jpg" alt="instagram">
     
+    <a href="https://www.instagram.com/andredeoliveira_oficial" target="_blank">ACESSE</a>
+
 </body>
 </html>
