--- a/twitter.html
+++ b/twitter.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HitHub</title>
+    <title>Twitter</title>
 </head>
-
 <style>
     *{
     margin: 0px;
@@ -33,10 +32,8 @@ a:hover{
 }
 </style>
 <body>
-
-    <img src="imagens/tela-github.jpg" alt="github">
-
-    <a href="https://github.com/adorepresentacoes" target="_blank">ACESSE</a>
     
+    <img src="imagens/tela-twitter.jpg" alt="twitter">
+    <a href="">ACESSE</a>
 </body>
 </html>
