--- a/facebook.html
+++ b/facebook.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HitHub</title>
+    <title>Facebook</title>
 </head>
 
 <style>
@@ -32,11 +32,12 @@ a:hover{
     background-color: red;
 }
 </style>
+
 <body>
 
-    <img src="imagens/tela-github.jpg" alt="github">
+    <img src="imagens/tela-facebook.jpg" alt="facebook">
 
-    <a href="https://github.com/adorepresentacoes" target="_blank">ACESSE</a>
+    <a href="https://pt-br.facebook.com/" target="_blank">ACESSE</a>
     
 </body>
 </html>
