--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
 
     <title>Projeto Redes Sociais</title>
@@ -29,6 +30,7 @@
             <a href="https://pt-br.facebook.com/" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
 
             <a href="https://twitter.com/" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
+            
         </section>
     </main>
 </body>
