--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
             <a href="https://www.instagram.com/" target="tela"><img src="imagens/logo-instagram.jpg"
                     alt="instagram"></a><br>
 
-            <a href="https://pt-br.facebook.com/" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
+            <a href="https://pt-br.facebook.com/" target="tela"><img src="imagens/logo-facebook.jpg"
+                    alt="facebook"></a><br>
 
             <a href="https://twitter.com/" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
-            
+
         </section>
     </main>
 </body>
