--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 
             <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
 
-            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
+            <a href="https://github.com/adorepresentacoes" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
 
-            <a href="https://www.instagram.com/" target="tela"><img src="imagens/logo-instagram.jpg"
+            <a href="https://www.instagram.com/andredeoliveira_oficial" target="tela"><img src="imagens/logo-instagram.jpg"
                     alt="instagram"></a><br>
 
             <a href="https://pt-br.facebook.com/" target="tela"><img src="imagens/logo-facebook.jpg"
