--- a/twitter.html
+++ b/twitter.html
@@ -10,6 +10,8 @@
 <body>
     
     <img src="imagens/tela-twitter.jpg" alt="twitter">
-    <a href="">ACESSE</a>
+    
+    <a href="https://twitter.com" target="_blank">ACESSE</a>
+
 </body>
 </html>
