--- a/facebook.html
+++ b/facebook.html
@@ -13,7 +13,7 @@
 
     <img src="imagens/tela-facebook.jpg" alt="facebook">
 
-    <a href="https://pt-br.facebook.com/" target="_blank">ACESSE</a>
+    <a href="https:/www.facebook.com.br/" target="_blank">ACESSE</a>
     
 </body>
 </html>
