--- a/twitter.html
+++ b/twitter.html
@@ -11,7 +11,7 @@
     
     <img src="imagens/tela-twitter.jpg" alt="twitter">
     
-    <a href="https://twitter.com" target="_blank">ACESSE</a>
+    <a href="https://about.twitter.com/pt" target="_blank">ACESSE</a>
 
 </body>
 </html>
