--- a/github.html
+++ b/github.html
@@ -11,7 +11,7 @@
 
     <img src="imagens/tela-github.jpg" alt="github">
 
-    <a href="https://github.com/adorepresentacoes" target="_blank">ACESSE</a>
+    <a href="https://www.github.com/adorepresentacoes" target="_blank">ACESSE</a>
     
 </body>
 </html>
